--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-dom": "19.2.0",
     "react-hook-form": "^7.70.0",
     "sass": "^1.95.0",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^4.3.5"
   },
   "devDependencies": {
